# NexBack

./: .gitignore  README.md  README_ZH.md  main.py  pyproject.toml
.github/: CODE_QUALITY_SUMMARY.md
resources/audio/: A.opus  B.opus  C.opus  H.opus  K.opus  L.opus  Q.opus  R.opus
scripts/: generate_audio.py
src/nexback/: __init__.py
src/nexback/core/: __init__.py  audio.py  engine.py  storage.py
src/nexback/ui/: __init__.py  grid_widget.py  main_window.py  settings_dialog.py
src/nexback/utils/: __init__.py  config.py
